--- a/portfolio.html
+++ b/portfolio.html
@@ -46,8 +46,9 @@
             <!--About section-->
 
             <!--Buttons-->
+
             <h1 hidden>Portfolio</h1>
-            <ul class="list-buton list">
+            <ul class="list">
                 <li> <button class="buton-all" type="button">All</buton>
                 </li>
                 <li><button class="about-buton" type="button">Web Site</button> </li>
@@ -57,8 +58,9 @@
             </ul>
 
             <!-- Services-->
-            <h2 hidden>Portfolio</h2>
             <ul class="list">
+                <h2 hidden>Portfolio</h2>
+
                 <li>
                     <a class="link" href="">
                         <img src="./images/interface.jpg" alt="interface" width="360" height="300">
@@ -86,7 +88,7 @@
                 <li>
                     <a class="link" href="">
                         <img src="./images/taxi.jpg" alt="taxi" width="360" height="300">>
-                        <h2 class="title-portfolio">Taxi Service</h2>
+                        <h3 class="title-portfolio">Taxi Service</h3>
                         <p class="text-portfolio">Marketing</p>
                     </a>
                 </li>
