--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
 
             <h1 hidden>Portfolio</h1>
             <ul class="list">
-                <li> <button class="buton-all" type="button">All</buton>
+                <li> <button class="about-buton but-all" type="button">All</buton>
                 </li>
                 <li><button class="about-buton" type="button">Web Site</button> </li>
                 <li><button class="about-buton" type="button">App</button> </li>
