--- a/portfolio.html
+++ b/portfolio.html
@@ -43,13 +43,12 @@
     </header>
     <main>
         <section>
-            <!--About section-->
 
             <!--Buttons-->
 
             <h1 hidden>Portfolio</h1>
             <ul class="list">
-                <li> <button class="about-buton but-all" type="button">All</buton>
+                <li> <button class="about-buton" type="button">All</buton>
                 </li>
                 <li><button class="about-buton" type="button">Web Site</button> </li>
                 <li><button class="about-buton" type="button">App</button> </li>
