--- a/portfolio.html
+++ b/portfolio.html
@@ -48,12 +48,12 @@
 
             <h1 hidden>Portfolio</h1>
             <ul class="list">
-                <li><button class="about-buton" type="button">All</buton>
-                </li>
-                <li><button class="about-buton" type="button">Web Site</button> </li>
-                <li><button class="about-buton" type="button">App</button> </li>
-                <li><button class="about-buton" type="button">Design</button> </li>
-                <li><button class="about-buton" type="button">Marketing</button> </li>
+
+                <li><button class="about-buton" type="button">All</button></li>
+                <li><button class="about-buton" type="button">Web Site</button></li>
+                <li><button class="about-buton" type="button">App</button></li>
+                <li><button class="about-buton" type="button">Design</button></li>
+                <li><button class="about-buton" type="button">Marketing</button></li>
             </ul>
 
             <!-- Services-->
